infrastructure/base/longhorn/ingress-longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-longhorn
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
  - host: "longhorn.vortex.lan"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
